--- a/samples/notebooks/python/01-basic-loading-the-kernel.ipynb
+++ b/samples/notebooks/python/01-basic-loading-the-kernel.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -28,15 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import semantic_kernel as sk\n",
-    "from semantic_kernel.connectors.ai.open_ai import AzureTextCompletion, OpenAITextCompletion"
+    "from semantic_kernel.connectors.ai.open_ai import AzureTextCompletion, OpenAITextCompletion, OpenAIChatCompletion"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -45,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +68,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -73,6 +77,112 @@
     "The SDK currently supports OpenAI and Azure OpenAI, other services will be added over time.\n",
     "\n",
     "If you need an Azure OpenAI key, go [here](https://learn.microsoft.com/en-us/azure/cognitive-services/openai/quickstart?pivots=rest-api)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<semantic_kernel.kernel.Kernel at 0x1da7f08d1d0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kernel = sk.Kernel()\n",
+    "kernel.add_chat_service()\n",
+    "api_key, org_id = sk.openai_settings_from_dot_env()\n",
+    "\n",
+    "kernel.add_text_completion_service(\"dv\", OpenAIChatCompletion(\"gpt-3.5-turbo\", api_key, org_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Why did the T-Rex refuse to go on a time travel tour? Because he heard it was a Jurassic parking lot!\n"
+     ]
+    }
+   ],
+   "source": [
+    "skill = kernel.import_semantic_skill_from_directory(\"../../skills\", \"FunSkill\")\n",
+    "joke_function = skill[\"Joke\"]\n",
+    "\n",
+    "print(joke_function(\"time travel to dinosaur age\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "import openpyxl\n",
+      "\n",
+      "# Define function with list of strings as input and no output\n",
+      "def appendprefix(values: list[str]) -> None:\n",
+      "    # Loop through each value in the list\n",
+      "    for val in values:\n",
+      "        # Print the value\n",
+      "        print(val)\n",
+      "    # Print \"done\" when finished\n",
+      "    print(\"done\")\n",
+      "\n",
+      "# Open Excel file\n",
+      "workbook = openpyxl.load_workbook('example.xlsx')\n",
+      "# Do something with the file\n",
+      "...\n",
+      "\n",
+      "# Close Excel file\n",
+      "workbook.close()\n"
+     ]
+    }
+   ],
+   "source": [
+    "skill = kernel.import_semantic_skill_from_directory(\"../../skills\", \"CodingSkill\")\n",
+    "python_function = skill[\"CodePython\"]\n",
+    "\n",
+    "print(python_function(\"open excel file \"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openpyxl\n",
+    "\n",
+    "# Define function with list of strings as input and no output\n",
+    "def appendprefix(values: list[str]) -> None:\n",
+    "    # Loop through each value in the list\n",
+    "    for val in values:\n",
+    "        # Print the value\n",
+    "        print(val)\n",
+    "    # Print \"done\" when finished\n",
+    "    print(\"done\")\n",
+    "\n",
+    "# Open Excel file\n",
+    "workbook = openpyxl.load_workbook('example.xlsx')\n",
+    "# Do something with the file\n",
+    "\n",
+    "# Close Excel file\n",
+    "workbook.close()"
    ]
   },
   {
@@ -103,6 +213,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -125,6 +236,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -134,9 +246,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "free",
    "language": "python",
-   "name": "python3"
+   "name": "free"
   },
   "language_info": {
    "codemirror_mode": {
@@ -148,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.2"
   },
   "polyglot_notebook": {
    "kernelInfo": {
